# VirtualOS

./: .gitignore  1  LICENSE  README.md  Virtual.cmake  linux_toolchain.cmake  toolchain.cmake
Component/FAL/: fal.c  fal_cfg.h  fal_def.h  fal_flash.c  fal_partition.c  fal_rtt.c
Component/RTT/: SEGGER_RTT.h
DAL/: README.md  dal_char_dev.c  dal_char_dev.h  dal_device.c  dal_device.h
DML/: README.md  dml_char_device.c  dml_char_device.h  dml_init.c  dml_init.h
Driver/: platform_schedule.c
Driver/GD32F30X/CMSIS/: core_cm4.h  core_cm4_simd.h  core_cmFunc.h  core_cmInstr.h
Driver/GD32F30X/CMSIS/GD/GD32F30x/Include/: gd32f30x.h  system_gd32f30x.h
Driver/GD32F30X/CMSIS/GD/GD32F30x/Source/: syscalls.c  system_gd32f30x.c
Driver/GD32F30X/GD32F30x_standard_peripheral/Include/: gd32f30x_adc.h  gd32f30x_bkp.h  gd32f30x_can.h  gd32f30x_crc.h  gd32f30x_ctc.h  gd32f30x_dac.h  gd32f30x_dbg.h  gd32f30x_dma.h  gd32f30x_enet.h  gd32f30x_exmc.h  gd32f30x_exti.h  gd32f30x_fmc.h  gd32f30x_fwdgt.h  gd32f30x_gpio.h  gd32f30x_i2c.h  gd32f30x_misc.h  gd32f30x_pmu.h  gd32f30x_rcu.h  gd32f30x_rtc.h  gd32f30x_sdio.h  gd32f30x_spi.h  gd32f30x_timer.h  gd32f30x_usart.h  gd32f30x_wwdgt.h
Driver/GD32F30X/GD32F30x_standard_peripheral/Source/: gd32f30x_adc.c  gd32f30x_bkp.c  gd32f30x_can.c  gd32f30x_crc.c  gd32f30x_ctc.c  gd32f30x_dac.c  gd32f30x_dbg.c  gd32f30x_dma.c  gd32f30x_enet.c  gd32f30x_exmc.c  gd32f30x_exti.c  gd32f30x_fmc.c  gd32f30x_fwdgt.c  gd32f30x_gpio.c  gd32f30x_i2c.c  gd32f30x_misc.c  gd32f30x_pmu.c  gd32f30x_rcu.c  gd32f30x_rtc.c  gd32f30x_sdio.c  gd32f30x_spi.c  gd32f30x_timer.c  gd32f30x_usart.c  gd32f30x_wwdgt.c
Driver/GD32F30X/driver/: driver_beep.c  driver_led_green.c  driver_led_red.c  driver_rgb_blue.c  driver_rgb_green.c  driver_rgb_red.c  driver_stimer.c
Driver/GD32L23X/CMSIS/GD32L23x/Source/: system_gd32l23x.c
Driver/GD32L23X/CMSIS/GD32L23x/Source/ARM/: startup_gd32l233.S
Driver/GD32L23X/GD32L23x_standard_peripheral/Include/: gd32l23x_ctc.h  gd32l23x_dma.h  gd32l23x_exti.h  gd32l23x_i2c.h  gd32l23x_lptimer.h  gd32l23x_rtc.h  gd32l23x_slcd.h  gd32l23x_spi.h  gd32l23x_trng.h  gd32l23x_wwdgt.h
Driver/GD32L23X/GD32L23x_standard_peripheral/Source/: gd32l23x_cau.c  gd32l23x_cau_des.c  gd32l23x_cau_tdes.c  gd32l23x_crc.c  gd32l23x_ctc.c  gd32l23x_exti.c  gd32l23x_fmc.c  gd32l23x_lptimer.c  gd32l23x_misc.c  gd32l23x_syscfg.c  gd32l23x_timer.c  gd32l23x_usart.c
Driver/GD32L23X/driver/: driver_485.c  driver_485.h  driver_ext_flash.c  driver_led_gree.h  driver_led_green.c  driver_power.c  driver_stimer.c  driver_stimer.h
Driver/syscall/: syscall.c
HAL/: hal.c  hal.h  hal_adc.c  hal_adc.h  hal_exti.c  hal_exti.h  hal_gpio.c  hal_gpio.h  hal_iic.c  hal_iic.h  hal_irqn_cb.c  hal_irqn_cb.h  hal_rtc.c  hal_rtc.h  hal_spi.c  hal_spi.h  hal_task_timer.c  hal_task_timer.h  hal_timer.c  hal_timer.h  hal_usart.c  hal_usart.h  hal_wwdt.c  hal_wwdt.h
Platform/GD32L23X/Board/: board_adc.c  board_adc.h  board_exti.c  board_exti.h  board_gpio.c  board_gpio.h  board_iic.c  board_iic.h  board_irqn_cb.c  board_irqn_cb.h  board_led.c  board_led.h  board_led_1.c  board_led_1.h  board_rtc.c  board_rtc.h  board_spi.c  board_spi.h  board_stimer.c  board_stimer.h  board_task_timer.c  board_task_timer.h  board_timer.c  board_timer.h  board_usart.c  board_usart.h  board_wwdt.c  board_wwdt.h  gd32L23x_board.c  gd32L23x_board.h
Platform/GD32L23X/CMSIS/GD32L23x/Include/: gd32l23x.h
Platform/GD32L23X/CMSIS/GD32L23x/Source/ARM/: startup_gd32l233xx.s
Platform/GD32L23X/GD32L23x_standard_peripheral/Include/: gd32l23x_cau.h  gd32l23x_cmp.h  gd32l23x_dbg.h  gd32l23x_fmc.h  gd32l23x_fwdgt.h  gd32l23x_lpuart.h  gd32l23x_misc.h  gd32l23x_pmu.h  gd32l23x_rcu.h  gd32l23x_timer.h  gd32l23x_usart.h
Platform/GD32L23X/GD32L23x_standard_peripheral/Source/: gd32l23x_adc.c  gd32l23x_cau_aes.c  gd32l23x_cmp.c  gd32l23x_dac.c  gd32l23x_dbg.c  gd32l23x_dma.c  gd32l23x_fwdgt.c  gd32l23x_gpio.c  gd32l23x_i2c.c  gd32l23x_lpuart.c  gd32l23x_pmu.c  gd32l23x_rcu.c  gd32l23x_rtc.c  gd32l23x_slcd.c  gd32l23x_spi.c  gd32l23x_trng.c  gd32l23x_vref.c  gd32l23x_wwdgt.c
Platform/syscall/: syscall.c
Plugin/clang-format/: format.sh  format_incremental.sh  pre-commit
Project/GD32F303ZGT6/App/: CMakeLists.txt
Project/GD32F303ZGT6/App/app/: app_beep.c  app_beep.h  app_init.c  app_init.h  app_led.c  app_led.h  app_pwm_led.c  app_pwm_led.h
Project/GD32F303ZGT6/App/sys/: gd32f30x_flash.ld  gd32f30x_it.c  systick.c
Project/GD32F303ZGT6/tools/: openocd_gdlink.cfg
Project/GD32L23x/App/: CMakeLists.txt  disassembly.txt  dml_init_disa.txt  test.uvoptx  test.uvprojx
Project/GD32L23x/App/app/: app_485.c  app_485.h  app_adc.c  app_adc.h  app_at_client.c  app_at_client.h  app_at_server.c  app_at_server.h  app_ext_flash.c  app_ext_flash.h  app_init.c  app_init.h  app_led.c  app_led.h  app_mcu_gpio.c  app_mcu_gpio.h  app_stimer.c  app_stimer.h  app_wifi.c  app_wifi.h  app_wifi_server.c  app_wifi_server.h  fal_flash_port.c  main.c
Project/GD32L23x/App/sys/: gd32l23x_flash.ld  gd32l23x_flash.sct  gd32l23x_it.c  gd32l23x_it.h  systick.c
Protocol/AT/at_client/: at_client.c  at_client.h  at_client_cmd.c  at_client_cmd.h
Protocol/AT/at_server/: at_server.c  at_server.h  at_server_cmd.c  at_server_cmd.h
Protocol/CloudElectricity/: cloud_electricity.c  cloud_electricity.h
Protocol/ModBUS/: modbus.h  modbus_slave.c  modbus_slave.h
Protocol/Protocol_4G/: protocol_4g.c  protocol_4g.h
Utilities/Hash/string_hash/: string_hash.c  string_hash.h
Utilities/button/: button.c  button.h
Utilities/crc/: crc.c  crc.h
Utilities/list/: list.c  list.h
Utilities/qfsm/: qfsm.c  qfsm.h
Utilities/queue/: queue.c  queue.h
Utilities/slog/: slog.c  slog.h
Utilities/soft_iic/: soft_iic.c  soft_iic.h
Utilities/stimer/: stimer.c  stimer.h
